# tauri-plugin-camera

./: Cargo.toml  README.md  package.json  rollup.config.js
examples/camera-app/src/app/camera/: camera.component.ts
guest-js/: index.ts
