[package]
name = "tauri-plugin-camera"
version = "0.1.4"
authors = [ "Charles Schaefer" ]
description = "A Tauri plugin for accessing the camera on Android devices."
repository = "https://github.com/charlesschaefer/tauri-plugin-camera"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-camera"
license = "MIT"


[dependencies]
tauri = { version = "2.3.1" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }

